# ReceptionDesk

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ReceptionDesk.h  main.cpp  mesh.cpp  pyramids.cpp  requirements.txt  scene.cpp
